test/zinc_source/compile_errors/error_handling/03_none_without_context.zn
// expected-error: None requires an expected Option<T> context
fn main() {
    value = None
    print(value)
}
